Completing the first exercise

--- a/linear/025_Exercises.ipynb
+++ b/linear/025_Exercises.ipynb
@@ -14,6 +14,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,9 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha: 0.10, MSE: 426.05, Weights: [[-101.72397081    1.16978757]]\n",
+      "Alpha: 0.20, MSE: 476.27, Weights: [[-70.75142154   0.99445055]]\n",
+      "Alpha: 0.30, MSE: 509.77, Weights: [[-54.23704349   0.90096184]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([188, 181, 197, 168, 167, 187, 178, 194, 140, 176, 168, 192, 173, 142, 176]).reshape(-1, 1).reshape(15,1)\n",
     "y = np.array([141, 106, 149, 59, 79, 136, 65, 136, 52, 87, 115, 140, 82, 69, 121]).reshape(-1, 1).reshape(15,1)\n",
@@ -34,14 +53,17 @@
     "x = np.asmatrix(np.c_[np.ones((15,1)),x])\n",
     "\n",
     "I = np.identity(2)\n",
-    "alpha = 0.1 # change here\n",
+    "alphas = [0.1, 0.2, 0.3] # change here\n",
     "\n",
     "# add 1-3 line of code here\n",
+    "for alpha in alphas:\n",
     "    w = np.linalg.inv(x.T*x + alpha * I)*x.T*y\n",
     "    w=w.ravel()\n",
     "\n",
     "# add 1-3 lines to compare the results\n",
-    "\n"
+    "    y_pred = np.array(x * w.reshape(-1,1))\n",
+    "    mse = np.mean((y - y_pred) ** 2)\n",
+    "    print(f\"Alpha: {alpha:.2f}, MSE: {mse:.2f}, Weights: {w}\")\n"
    ]
   },
   {
@@ -55,20 +77,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sgd():\n",
-    "    # your code goes here\n",
-    "    pass"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "def sgd(x, y, alpha=0.1, learning_rate=0.01, epochs=10):\n",
+    "    x = np.asarray(x)\n",
+    "    y = np.asarray(y)\n",
+    "    n_features = x.shape[1]\n",
+    "    w = np.zeros(n_features)\n",
+    "    n_samples = x.shape[0]\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        indices = np.random.permutation(n_samples)\n",
+    "        x_shuffled = x[indices]\n",
+    "        y_shuffled = y[indices]\n",
+    "        \n",
+    "        for i in range(n_samples):\n",
+    "            y_pred = np.dot(x_shuffled[i], w)\n",
+    "            mse_grad = -2 * x_shuffled[i] * (y_shuffled[i] - y_pred)\n",
+    "            \n",
+    "            l1_grad = np.zeros_like(w)\n",
+    "            for j in range(n_features):\n",
+    "                if w[j] > 0:\n",
+    "                    l1_grad[j] = 1\n",
+    "                elif w[j] < 0:\n",
+    "                    l1_grad[j] = -1\n",
+    "                else:\n",
+    "                    l1_grad[j] = np.random.choice([-1, 1])\n",
+    "            \n",
+    "            grad = mse_grad + alpha * l1_grad\n",
+    "            w = w - learning_rate * grad\n",
+    "            \n",
+    "    return w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "MSE Comparison:\n",
+      "SGD Lasso MSE: 12184.22\n",
+      "Sklearn Lasso MSE: 12253.79\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([188, 181, 197, 168, 167, 187, 178, 194, 140, 176, 168, 192, 173, 142, 176]).reshape(-1, 1).reshape(15,1)\n",
     "y = np.array([141, 106, 149, 59, 79, 136, 65, 136, 52, 87, 115, 140, 82, 69, 121]).reshape(-1, 1).reshape(15,1)\n",
@@ -78,9 +141,29 @@
     "I = np.identity(2)\n",
     "alpha = 0.1 \n",
     "\n",
+    "x = np.asarray(x)\n",
+    "x_mean = np.mean(x, axis=0)\n",
+    "x_std = np.std(x, axis=0)\n",
+    "x_std[x_std == 0] = 1\n",
+    "x_scaled = (x - x_mean) / x_std\n",
     "\n",
-    "w = np.linalg.inv(x.T*x + alpha * I)*x.T*y # update this line\n",
-    "w=w.ravel()\n"
+    "w = sgd(x_scaled, y, alpha=alpha)\n",
+    "\n",
+    "lasso_sk = Lasso(alpha=alpha, fit_intercept=False)\n",
+    "lasso_sk.fit(x_scaled, y)\n",
+    "\n",
+    "y_pred_sgd = np.dot(x_scaled, w)\n",
+    "y_pred_sk = lasso_sk.predict(x_scaled)\n",
+    "\n",
+    "mse_sgd = np.mean((y - y_pred_sgd) ** 2)\n",
+    "mse_sk = np.mean((y - y_pred_sk) ** 2)\n",
+    "\n",
+    "print(\"\\nMSE Comparison:\")\n",
+    "print(f\"SGD Lasso MSE: {mse_sgd:.2f}\")\n",
+    "print(f\"Sklearn Lasso MSE: {mse_sk:.2f}\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -94,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,27 +190,26 @@
     "iris_df = pd.DataFrame(iris_data.data,columns=iris_data.feature_names)\n",
     "iris_df.head()\n",
     "\n",
-    "x = iris_df['sepal width (cm)'].values # change here\n",
-    "y = iris_df['sepal length (cm)'].values # change here\n",
+    "x = iris_df[['sepal width (cm)', 'petal width (cm)']].values # change here\n",
+    "y = iris_data.target # change here\n",
     "\n",
-    "dataset_size = np.size(x)\n",
+    "dataset_size = np.size(x, axis=0)\n",
+    "mean_x = np.mean(x, axis=0)\n",
+    "mean_y = np.mean(y)\n",
     "\n",
-    "mean_x, mean_y = np.mean(x), np.mean(y)\n",
-    "\n",
-    "SS_xy = np.sum(y * x) - dataset_size * mean_y * mean_x\n",
-    "SS_xx = np.sum(x * x) - dataset_size * mean_x * mean_x\n",
+    "SS_xy = np.sum((y - mean_y).reshape(-1, 1) * (x - mean_x), axis=0)\n",
+    "SS_xx = np.sum((x - mean_x) * (x - mean_x), axis=0)\n",
     "\n",
     "a = SS_xy / SS_xx\n",
-    "b = mean_y - a * mean_x\n",
+    "b = mean_y - np.sum(a * mean_x)\n",
     "\n",
-    "\n",
-    "y_pred = a * x + b"
+    "y_pred = np.sum(a * x, axis=1) + b"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
